--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^20.0.0",
     "@ngrx/effects": "^20.1.0",
     "@ngrx/store": "^20.1.0",
+    "angular-cli-ghpages": "^3.0.2",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
     "tslib": "^2.3.0",
